MVC Test에서 MockMvc 생성시 필터가 처리가 되지 않아. JUnit 시 수동으로 지정하여 form put 테스트 통과 시킴.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,6 +6,8 @@
 <body>
 <h1>Welcome!</h1>
 
+<a href="blog/posts/list.html" th:href="@{/{endpoint}/posts(endpoint='sonegy')}" >블로그 바로기기</a>
+
 <p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
 </body>
 </html>
