--- a/src/main/resources/templates/blog/posts/view.html
+++ b/src/main/resources/templates/blog/posts/view.html
@@ -14,6 +14,9 @@
         <pre class="_content" th:text="${post.content}"></pre>
     </dd>
 </dl>
+<p>
+    <a href="list.html" th:href="@{../posts}">블로그 홈으로 가기</a>
+</p>
 의견을 적어주세요.
 <form id="commentForm" action="#" th:action="@{{id}/comments/form(id=${post.id})}" th:method="POST">
     <textarea th:name="content"></textarea>
@@ -24,10 +27,11 @@
     <!--/*@thymesVar id="comment" type="com.woowahan.riders.spring.practice.blog.controller.dto.CommentsResponse.CommentResponse"*/-->
     <li th:each="comment,iterStat : ${comments.comments}">
         <div class="_comment" th:text="${comment.content}">테스트문장.</div>
+        <!--/*@thymesVar id="c" type="com.woowahan.riders.spring.practice.blog.controller.dto.CommentsResponse.CommentResponse"*/-->
         <form action="#" method="PUT" th:action="@{{postId}/comments/form(postId=${comment.postId})}" th:method="PUT">
             <input type="hidden" name="id" th:value="${comment.id}" />
             <input type="hidden" name="postId" th:value="${comment.postId}" />
-            <textarea name="content" th:value="${comment.content}">테스트문장.</textarea>
+            <textarea name="content" th:text="${comment.content}">테스트문장.</textarea>
             <input type="submit" />
         </form>
     </li>
